test/success/nostd/basics/iflet/main.sk
module Main {

enum Foo {
    Bar,
    Baz
}

fn main() {
    let a = Bar;
    if let Bar = a {
    } else if let Baz = a {
    } else {
    }
}

}