test/errors/not_a_constructor/main.sk
module Main {

enum Foo {
    Bar
}

fn main() {
    Foo();
}

}